--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1 {
 }
 
 .brand-section {
-  background: #d5d5e7;
+  background: #440E03;
   border-radius: 15px;
   padding: 20px;
   box-shadow: 0 0 20px #00f0ff33;
