--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1 {
 }
 
 .brand-section {
-  background: #008080;
+  background: #21213b;
   border-radius: 15px;
   padding: 20px;
   box-shadow: 0 0 20px #00f0ff33;
